[package]
name = "password_reset_app"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-native-tls"] }
lettre = "0.10"
chrono = "0.4"

